# chipflow-docs

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CNAME  README.md  amaranth-soc.html  copy-docs.sh  genindex.html  index.html  llms-full.txt  objects.inv  platform-api.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  support.html  tutorial-intro-chipflow-platform.html  tutorial-intro-chipflow-platform.html.md
.github/: docs-review-prompt.md
.github/workflows/: build-docs.yml  deploy-chat-backend.yml  deploy-docs-internal.yml  docs-review.yml  main.yml  preview-docs.yml  release.yml
_sources/: amaranth-soc.rst.txt  amaranth.rst.txt  index.rst.txt
_sources/chipflow-digital-ip/: index.rst.txt
_sources/chipflow-lib/: platform-api.rst.txt  simulation-guide.rst.txt
_sources/examples/: getting-started.rst.txt  minimal.rst.txt
_static/js/: chat-widget.js  init.js
amaranth/: changes.html  changes.html.md  contrib.html  guide.html  guide.html.md  index.html  install.html  intro.html  platform.html  platform.html.md  reference.html  simulator.html  simulator.html.md  start.html  start.html.md  stdlib.html  stdlib.html.md  tutorial.html
amaranth-soc/: csr.html  gpio.html  index.html  index.html.md  memory.html  wishbone.html
amaranth-soc/csr/: action.html  action.html.md  bus.html  reg.html
amaranth-soc/wishbone/: bus.html
amaranth/platform/: altera.html  gowin.html  lattice.html  lattice.html.md  quicklogic.html  quicklogic.html.md  siliconblue.html  xilinx.html
amaranth/stdlib/: cdc.html  coding.html  crc.html  crc.html.md  data.html  enum.html  fifo.html  io.html  memory.html  memory.html.md  meta.html  stream.html  wiring.html  wiring.html.md
chat-backend/: Dockerfile  README.md  cloudbuild.yaml  main.py  requirements.txt  setup-gcp.sh
chipflow-digital-ip/: base.html  index.html  io.html  io.html.md  memory.html  processors.html  processors.html.md
chipflow-lib/: UNFINISHED_IDEAS.html  architecture.html  architecture.html.md  chipflow-commands.html  chipflow-toml-guide.html  contributor-pin-signature-internals.html  getting-started.html  index.html  platform-api.html  simulation-guide.html  simulation-guide.html.md  using-pin-signatures.html
chipflow-lib/autoapi/: index.html
configurator/: index.html  index.html.md
docs/source/: conf.py  index.rst  support.rst  tutorial-intro-chipflow-platform.rst
examples/: getting-started.html  index.html  index.html.md  mcu-soc.html  mcu-soc.html.md  minimal.html  minimal.html.md
tools/: __init__.py  copy_docs.py  sphinx_json_index.py  sphinx_llms_enhancements.py
(+783 files in other folders)
