[project]
name = "chipflow-docs"
version = "0.0.0"
authors = [
  {name = "Ross Motley", email = "ross.motley@chipflow.io"}
]
readme = "README.md"

requires-python = "~=3.8"
dependencies = [
  "myst-parser~=0.18.1",
  "furo",
  "sphinx-copybutton~=0.5.1",
]

[tool.pdm.dev-dependencies]
dev = [
  "sphinx-autobuild",
]

[tool.pdm.scripts]
build.cmd = "sphinx-build docs/source/ docs/build/"
autobuild.cmd = "sphinx-autobuild docs/source/ docs/build/"
