[project]
name = "chipflow-docs"
version = "0.2"
authors = [
  {name = "Rob Taylor", email = "rob.tayloe@chipflow.io"}
]
readme = "README.md"

requires-python = "<3.13"
dependencies = [
  "sphinx>=7.1",
  "sphinxcontrib-platformpicker~=1.4",
  "sphinxcontrib-yowasp-wavedrom==1.8", # exact version to avoid changes in rendering
  "sphinx-rtd-theme>=3.0.0",
  "sphinx-autobuild==2024.10.3",
  "myst-parser>=4.0.1",
  "furo==2024.8.6",
  "sphinx-copybutton>=0.5.2",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-multiproject>=1.0.0",
  "sphinx-design>=0.6.0",
  "sphinx_design_elements @ git+https://github.com/panodata/sphinx-design-elements@linktree",
  "sphinxext-rediraffe>=0.2.7",
  "sphinx-autoapi>=3.6.0",
  "jschon>=0.11.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
docs.cmd= "sphinx-build docs/source/ docs/build/"
autodocs.cmd= "sphinx-autobuild docs/source/ docs/build/"

